# qa-automation-wt

./: .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  categories.json  chart_data.sh  chart_data_netlify.sh  conftest.py  ggsheet_key.json  merge_report.sh  parameters.xlsx  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_mobile_tests_sequential.sh  run_web_tests.sh  run_web_tests_multiple.sh  unit-test-generation-chatlog.md
.amazonq/rules/: code-comprehension-rules.md  code-standards-rules.md  documentation-rules.md
allure-reports/ios/: index.html
allure-reports/web/: index.html
allure-reports/web_app/: index.html
bridge_files/: BridgeEA.mq4  BridgeEA.mq5
config/: prod.yaml  release_sit.yaml  sit.yaml  uat.yaml
docs/: stop_limit_test_suite.md  test_naming_convention.md
docs/android/: android_market_screen_docs.md
reports/: index.html
reports/android/: index.html
src/apis/: api_base.py  api_client.py  auth_api.py  chart_api.py  config_api.py  market_api.py  notification.py  order_api.py  user_api.py  (+2 more)
test_MT4_AdminPortal/: MT4_aA01.py  conftest.py
test_MT4_Android/: conftest.py
test_MT4_Desktop/: CPUAT_MT4_aA01.py  conftest.py  review_gtd.py
test_MT4_Mobile/: conftest.py
test_MT4_iOS/: conftest.py
test_MT5_Android/: apple.py  conftest.py  others.py
test_MT5_Desktop/: conftest.py  review_gtd.py
test_mt4_android/: conftest.py
test_mt4_desktop/: conftest.py  review_gtd.py
test_mt5_android/: conftest.py
test_mt5_desktop/: conftest.py  review_gtd.py
test_rootAdmin/: conftest.py  test_bA01.py
tests/: conftest.py
(+2718 files in other folders)
